--- a/server/tomcat/web/css/recovery.css
+++ b/server/tomcat/web/css/recovery.css
@@ -6,15 +6,17 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
 .navbar-container1 {
   width: 100%;
   border: 2px dashed rgba(120, 120, 120, 0.4);
-  height: 12vh;
+  height: 10vh;
   display: flex;
   opacity: 1;
   align-items: flex-start;
   background-color: var(--dl-color-theme-secondary1);
 }
+
 .navbar-container2 {
   width: 100%;
   display: flex;
@@ -22,27 +24,33 @@
   justify-content: center;
   background-color: var(--dl-color-theme-secondary1);
 }
+
 .navbar-navbar-interactive {
   top: 0;
   width: 100%;
-  height: 12vh;
+  height: 10vh;
   display: flex;
   z-index: 1;
   position: fixed;
   max-width: 100%;
   align-self: stretch;
+  box-shadow: 0px 4px 5px 0px #151111;
   align-items: center;
   padding-top: var(--dl-space-space-twounits);
+  border-color: #a43c3c;
+  border-width: 2px;
   padding-left: var(--dl-space-space-twounits);
   padding-right: var(--dl-space-space-twounits);
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
   background-color: var(--dl-color-theme-secondary1);
 }
+
 .navbar-pasted-image {
   width: 6vw;
-  height: 10vh;
+  height: 9vh;
 }
+
 .navbar-desktop-menu {
   flex: 1;
   width: 80vw;
@@ -50,6 +58,7 @@
   position: relative;
   justify-content: space-between;
 }
+
 .navbar-links {
   gap: var(--dl-space-space-twounits);
   width: 70vw;
@@ -60,49 +69,64 @@
   flex-direction: row;
   justify-content: flex-start;
 }
+
 .navbar-container3 {
+  width: 30vw;
+  height: 100%;
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: center;
 }
+
 .navbar-textinput {
-  width: 20wh;
+  width: 100%;
+  height: 3vh;
   padding-left: var(--dl-space-space-oneandhalfunits);
   border-radius: 20px;
 }
+
 .navbar-search {
   width: 5vw;
-  height: 4vh;
+  height: 3vh;
   display: flex;
+  margin-left: var(--dl-space-space-halfunit);
   border-color: var(--dl-color-theme-primary1);
   padding-left: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
 }
+
 .navbar-text {
+  font-size: 0.9rem;
   font-weight: 400;
 }
+
 .navbar-container4 {
-  width: 40vw;
+  width: 35vw;
   height: 2vh;
   display: flex;
   align-items: flex-start;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .navbar-home {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   text-decoration: none;
 }
+
 .navbar-contact {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
 }
+
 .navbar-whoweare {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
 }
+
 .navbar-manager-order {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
 }
+
 .navbar-buttons {
   width: 17vw;
   height: 10vh;
@@ -112,6 +136,7 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
 .navbar-icon {
   fill: #101010;
   width: 3vw;
@@ -120,6 +145,7 @@
   margin-left: var(--dl-space-space-halfunit);
   margin-bottom: var(--dl-space-space-halfunit);
 }
+
 .navbar-icon02 {
   fill: #161515;
   width: 3vw;
@@ -127,8 +153,9 @@
   margin-top: var(--dl-space-space-halfunit);
   margin-bottom: var(--dl-space-space-halfunit);
 }
+
 .navbar-account {
-  width: 10vw;
+  width: 8vw;
   height: 4vh;
   display: flex;
   position: relative;
@@ -138,27 +165,22 @@
   flex-direction: row;
   text-decoration: none;
 }
-.navbar-text3 {
-  width: 4vw;
-  height: 2vh;
-  font-size: 1rem;
-  align-self: center;
-  margin-top: var(--dl-space-space-halfunit);
-  margin-left: var(--dl-space-space-halfunit);
-  margin-bottom: var(--dl-space-space-halfunit);
-}
+
 .navbar-icon04 {
-  width: 2vw;
-  height: 2vh;
+  width: 3vw;
+  height: 3vh;
   margin-left: var(--dl-space-space-halfunit);
 }
+
 .navbar-burger-menu {
   display: none;
 }
+
 .navbar-icon06 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
+
 .navbar-mobile-menu {
   top: 0px;
   left: 0px;
@@ -173,11 +195,13 @@
   flex-direction: column;
   background-color: var(--dl-color-theme-neutral-light);
 }
+
 .navbar-nav {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
+
 .navbar-top {
   width: 100%;
   display: flex;
@@ -185,6 +209,7 @@
   margin-bottom: var(--dl-space-space-threeunits);
   justify-content: space-between;
 }
+
 .navbar-container5 {
   flex: 0 0 auto;
   width: auto;
@@ -193,15 +218,18 @@
   align-items: space-between;
   flex-direction: column;
 }
+
 .navbar-close-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .navbar-icon08 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
+
 .navbar-links1 {
   gap: var(--dl-space-space-unit);
   flex: 0 0 auto;
@@ -210,17 +238,20 @@
   align-items: flex-start;
   flex-direction: column;
 }
+
 .navbar-container6 {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: center;
 }
+
 .navbar-textinput1 {
   width: 291px;
   padding-left: var(--dl-space-space-twounits);
   border-radius: 20px;
 }
+
 .navbar-search1 {
   width: 61px;
   height: 33px;
@@ -229,9 +260,11 @@
   padding-left: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
 }
-.navbar-text6 {
+
+.navbar-text3 {
   font-weight: 400;
 }
+
 .navbar-buttons1 {
   gap: var(--dl-space-space-twounits);
   border: 2px dashed rgba(120, 120, 120, 0.4);
@@ -240,31 +273,9 @@
   align-items: center;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.navbar-root-class-name20 {
+  align-self: flex-start;
+}
 
 @media(max-width: 1200px) {
   .navbar-pasted-image1 {
@@ -272,32 +283,39 @@
     height: 119px;
   }
 }
+
 @media(max-width: 767px) {
   .navbar-navbar-interactive {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
+
   .navbar-desktop-menu {
     display: none;
   }
+
   .navbar-burger-menu {
     display: flex;
     align-items: center;
     justify-content: center;
   }
 }
+
 @media(max-width: 479px) {
   .navbar-navbar-interactive {
     padding: var(--dl-space-space-unit);
     padding-right: 16px;
   }
+
   .navbar-mobile-menu {
     padding: var(--dl-space-space-unit);
   }
+
   .navbar-pasted-image1 {
     width: 108px;
     height: 78px;
   }
+
   .navbar-textinput1 {
     width: 257px;
     height: 37px;
@@ -306,13 +324,14 @@
 
 .menu-function-container {
   width: 100%;
-  height: 58px;
+  height: 5vh;
   display: flex;
   position: relative;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(90deg, rgb(192, 36, 37) 0.00%,rgba(42, 42, 39, 0.45) 100.00%);
+  background-image: linear-gradient(90deg, rgb(192, 36, 37) 0.00%, rgba(42, 42, 39, 0.45) 100.00%);
 }
+
 .menu-function-manager {
   width: 70vw;
   height: 100%;
@@ -320,18 +339,20 @@
   align-items: center;
   justify-content: space-between;
 }
+
 .menu-function-mgt-ware-house {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-style: normal;
   font-family: "Noto Sans";
   font-weight: 600;
 }
+
 .menu-function-mgt-customer {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-style: normal;
   font-family: "Noto Sans";
   font-weight: 600;
@@ -339,10 +360,11 @@
   text-transform: none;
   text-decoration: none;
 }
+
 .menu-function-mgt-feebcack {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-style: normal;
   font-family: "Noto Sans";
   font-weight: 600;
@@ -350,10 +372,11 @@
   text-transform: none;
   text-decoration: none;
 }
+
 .menu-function-mgt-staff {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-style: normal;
   font-family: "Noto Sans";
   font-weight: 600;
@@ -361,72 +384,37 @@
   text-transform: none;
   text-decoration: none;
 }
+
 .menu-function-mgt-report {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .resetpass-container {
-  width: 780px;
-  height: 609px;
+  width: 40vw;
+  height: 50vh;
   display: flex;
   position: relative;
   align-items: center;
   flex-direction: column;
   justify-content: center;
 }
+
 .resetpass-max-width {
   gap: var(--dl-space-space-twounits);
-  width: 757px;
-  height: 608px;
+  width: 40vw;
+  height: 55vh;
   display: flex;
   z-index: 100;
+  box-shadow: 5px 5px 5px 0px #060606;
   align-items: center;
+  border-color: var(--dl-color-theme-neutral-dark);
+  border-width: 2px;
   border-radius: 40px;
   flex-direction: column;
   justify-content: center;
   background-color: var(--dl-color-theme-neutral-light);
 }
-.resetpass-form-root {
-  gap: var(--dl-space-space-unit);
-  width: 600px;
-  height: auto;
-  display: flex;
-  overflow: hidden;
-  max-width: 600px;
-  align-items: center;
-  flex-shrink: 0;
-  border-radius: var(--dl-radius-radius-radius4);
-  justify-content: center;
-}
+
 .resetpass-form {
   gap: var(--dl-space-space-oneandhalfunits);
   width: 100%;
@@ -436,10 +424,14 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+
 .resetpass-text {
+  font-size: 2.5rem;
   align-self: center;
+  text-align: center;
   text-decoration: underline;
 }
+
 .resetpass-form1 {
   gap: var(--dl-space-space-unit);
   width: 100%;
@@ -447,6 +439,7 @@
   display: flex;
   flex-direction: column;
 }
+
 .resetpass-email {
   gap: var(--dl-space-space-halfunit);
   width: 100%;
@@ -455,36 +448,33 @@
   flex-shrink: 0;
   flex-direction: column;
 }
+
 .resetpass-textinput {
   width: 100%;
   border-color: var(--dl-color-theme-primary1);
   background-color: transparent;
 }
-.resetpass-container1 {
-  gap: var(--dl-space-space-halfunit);
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: flex-end;
-}
+
 .resetpass-button {
   width: 100%;
   align-self: center;
   background-color: #7e151f;
 }
+
 .resetpass-text4 {
   text-align: center;
 }
-.resetpass-container2 {
+
+.resetpass-container1 {
   gap: var(--dl-space-space-unit);
   width: 100%;
   display: flex;
-  max-width: 600px;
+  max-width: 100%;
   align-items: center;
   flex-direction: column;
   justify-content: center;
 }
+
 .resetpass-divider {
   gap: var(--dl-space-space-oneandhalfunits);
   width: 100%;
@@ -494,6 +484,7 @@
   flex-shrink: 0;
   justify-content: center;
 }
+
 .resetpass-divider1 {
   flex: 1;
   width: var(--dl-size-size-medium);
@@ -503,6 +494,7 @@
   flex-direction: column;
   background-color: var(--dl-color-theme-primary1);
 }
+
 .resetpass-divider2 {
   flex: 1;
   width: var(--dl-size-size-medium);
@@ -512,15 +504,18 @@
   flex-direction: column;
   background-color: var(--dl-color-theme-primary1);
 }
+
 .resetpass-button1 {
   width: 100%;
   align-self: center;
   text-decoration: none;
 }
+
 .resetpass-text6 {
   text-align: center;
 }
-.resetpass-container3 {
+
+.resetpass-container2 {
   gap: var(--dl-space-space-halfunit);
   width: 100%;
   display: flex;
@@ -528,34 +523,31 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+
 .resetpass-button2 {
   width: 100%;
   align-self: center;
 }
+
 .resetpass-icon {
   fill: #ecece0;
   width: 24px;
   height: 24px;
 }
+
 .resetpass-text7 {
   text-align: center;
 }
 
-@media(max-width: 991px) {
-  .resetpass-form-root {
-    width: 100%;
-  }
-}
 @media(max-width: 479px) {
-  .resetpass-form-root {
-    padding: 0px;
-  }
   .resetpass-button {
     width: 100%;
   }
+
   .resetpass-button1 {
     width: 100%;
   }
+
   .resetpass-button2 {
     width: 100%;
   }
@@ -569,6 +561,7 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
 .reset-password-header {
   width: 100%;
   display: flex;
@@ -576,9 +569,10 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
 .reset-password-container1 {
   width: 100%;
-  height: 793px;
+  height: 85vh;
   display: flex;
   align-items: center;
   background-size: cover;
