front end fixes

--- a/server/tomcat/web/css/googleRegister.css
+++ b/server/tomcat/web/css/googleRegister.css
@@ -442,7 +442,7 @@
   text-align: center;
   font-family: "STIX Two Text";
   margin-bottom: var(--dl-space-space-twounits);
-  text-decoration: underline;
+  ;
 }
 
 .register-by-gg-form1 {
