--- a/server/tomcat/web/css/register.css
+++ b/server/tomcat/web/css/register.css
@@ -433,7 +433,7 @@
   font-size: 2.5rem;
   align-self: center;
   text-align: center;
-  text-decoration: underline;
+  ;
 }
 
 .register-form-form1 {
