--- a/server/tomcat/web/css/activate.css
+++ b/server/tomcat/web/css/activate.css
@@ -437,7 +437,7 @@
   font-size: 2.5rem;
   align-self: center;
   text-align: center;
-  text-decoration: underline;
+  ;
 }
 
 .activate-acc1-form1 {
