--- a/server/tomcat/web/css/login.css
+++ b/server/tomcat/web/css/login.css
@@ -433,7 +433,7 @@
   align-self: center;
   text-align: center;
   margin-bottom: var(--dl-space-space-unit);
-  text-decoration: underline;
+  ;
 }
 
 .sign-in-email {
